# libmodbus-cpp

./: 2026-02-28_windows-ci-build-troubleshooting.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  publish-release.yml  release-build.yml  release.yml
cmake/: libmodbus_cppConfig.cmake.in  toolchain-linux-aarch64.cmake
include/caparoc/: modbus_connection.hpp
include/libmodbus_cpp/: modbus_connection.hpp
src/: modbus_connection.cpp
